# taxalotl

./: .gitignore  CONTRIBUTORS.txt  README.md  Tutorial.md  completion.sh  install.sh  pyproject.toml  recommended-peyotl-conf.ini  requirements.txt  setup.py  taxalotl-cli.py  taxalotl.conf.example
cpp_wikidata_parser/: .gitignore  Makefile  README.md  parse_full_wikidata_dump.cpp
doc/: Schema.md
resources/: .gitignore  README.md  S2010.json  gbif.json  h2007.json  if.json  irmng.json  ncbi.json  ott.json  resources.json  silva.json  wikdidata-partition-map.json  wikdidata-to-manually-suppress.txt  worms-1.json  worms.json
scripts/: grab_wikidata_json_entities_with_ids.bash  improved_taxon_extractor.py  local_status.py  partition-generic.py  print_lines_with_par_id.py  process_ncbi_taxonomy_taxdump.py  read_wikidata_taxon_json_dump.py  taxalotl-cli.py
src/taxalotl/: __init__.py  cli.py  commands.py  config.py  newick.py  ott_schema.py  resource_manager.py  resource_mapper.py  resource_wrapper.py  tax_partition.py  taxon.py  taxonomic_ranks.py  tree.py  util.py  wikidata.py  wikispecies.py
taxalotl/: __init__.py  __version__.py  align.py  analyze_update.py  col.py  col_read.py  commands.py  compare.py  config.py  darwin_core.py  dynamic_partitioning.py  interim_taxonomy_struct.py  irmng.py  name_parsing.py  ncbi.py  newick.py  ott.py  ott_schema.py  partitions.py  plant_list.py  resource_manager.py  resource_mapper.py  resource_wrapper.py  semanticize.py  silva.py  tax_partition.py  taxon.py  taxonomic_ranks.py  tree.py  util.py  worms.py
(+51 files in other folders)
