[build-system]
requires = ["flit_core >= 3.12.0, <4"]
build-backend = "flit_core.buildapi"

[project]
name = "taxalotl"
dynamic = ["version", "description"]
authors = [
  { name="Mark Holder", email="mtholder@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
license = "BSD-2-Clause"
license-files = ["License.txt"]

[project.urls]
Homepage = "https://github.com/OpenTreeOfLife/taxalotl"
Issues = "https://github.com/OpenTreeOfLife/taxalotl/issues"

[project.scripts]
taxalotlcli = "taxalotl.cli:main"
